# shadowboxing

./: .gitignore  CLAUDE.md  Cargo.toml  demons.txt  index.html  vision.md
.cargo/: config.toml
.github/workflows/: deploy.yml
assets/: Datasheets.json  Datasheets_models.json  Datasheets_wargear.json  base-sizes.json  deployment-patterns.json
assets/terrain-layouts/gw/: layout-1.json
assets/terrain-layouts/sandbox/: empty.json  ruin-with-walls.json  single-ruin.json
src/: events.rs  main.rs  resources.rs
src/army_list/: base_lookup.rs  mod.rs
src/los/: mod.rs  occupancy.rs  shapes.rs  vis_poly.rs
src/plugins/: board.rs  deployment.rs  mod.rs  terrain.rs  timeline.rs  ui.rs  units.rs  visibility.rs
src/types/: deployment.rs  mod.rs  phase.rs  terrain.rs  timeline.rs  units.rs  visibility.rs
