[package]
name = "bevy-deploy-helper"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "bevy-deploy-helper"
path = "src/main.rs"

[dependencies]
bevy = { version = "0.15", features = ["default"] }
bevy_egui = "0.31"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rayon = "1"
geo = { version = "0.28", features = ["use-serde"] }
geo-types = "0.7"
futures-lite = "2"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3
