[package]
name = "bevy-deploy-helper"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "bevy-deploy-helper"
path = "src/main.rs"

[dependencies]
bevy = { version = "0.15", default-features = false, features = [
    "bevy_asset", "bevy_color", "bevy_core_pipeline", "bevy_picking",
    "bevy_render", "bevy_sprite", "bevy_state", "bevy_text", "bevy_ui",
    "bevy_winit", "bevy_window", "bevy_mesh_picking_backend",
    "bevy_ui_picking_backend", "bevy_sprite_picking_backend",
    "serialize", "png", "default_font", "webgl2",
] }
bevy_egui = "0.31"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
geo = { version = "0.28", features = ["use-serde"] }
geo-types = "0.7"
futures-lite = "2"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
rayon = "1"
bevy = { version = "0.15", features = ["multi_threaded", "x11", "wayland"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.3", features = ["wasm_js"] }

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[profile.release]
opt-level = "z"
lto = "thin"
codegen-units = 1
